[gd_scene load_steps=23 format=3 uid="uid://bt28kkktirqdl"]

[ext_resource type="Script" path="res://Scripts/Initialize.gd" id="1_2qm00"]
[ext_resource type="Script" path="res://Scripts/ActionZone.gd" id="2_kkrn7"]
[ext_resource type="Script" path="res://Scripts/RedirectionManager.gd" id="3_fwjqc"]
[ext_resource type="Script" path="res://Scripts/CurvatureController.gd" id="4_tcsu2"]
[ext_resource type="Script" path="res://Scripts/ResetController.gd" id="5_2vclo"]
[ext_resource type="Script" path="res://Scripts/MetaStrategyManager.gd" id="6_hqu0u"]
[ext_resource type="PackedScene" uid="uid://c3il6b6v8471g" path="res://Scenes/CalibrationPanel.tscn" id="6_oo0k3"]
[ext_resource type="Script" path="res://Scripts/LocomotionController.gd" id="9_r4u24"]
[ext_resource type="Script" path="res://Scripts/Ballons.gd" id="10_q8y60"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_r4snt"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_c5c3h"]
sky_material = SubResource("ProceduralSkyMaterial_r4snt")

[sub_resource type="Environment" id="Environment_qeldc"]
background_mode = 2
sky = SubResource("Sky_c5c3h")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_eyq75"]
size = Vector3(8, 0.2, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_ddw37"]
size = Vector3(8, 0.2, 8)

[sub_resource type="SphereMesh" id="SphereMesh_mfgol"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5gpa2"]
albedo_color = Color(0.933333, 0.839216, 1, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_8jf45"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2rgup"]
albedo_color = Color(0.1, 0.6, 0.6, 1)
emission_enabled = true
emission_energy_multiplier = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_1t4ky"]
inner_radius = 3.814
outer_radius = 3.944

[sub_resource type="SphereMesh" id="SphereMesh_2nlxt"]
radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_irg6d"]
albedo_color = Color(0.962367, 0.592963, 0.627268, 0.815686)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_aqk6w"]
radius = 0.3
height = 1.6

[node name="MainVR" type="Node3D"]
transform = Transform3D(0.892873, -0.0190034, 0.449906, 0.0199755, 0.999797, 0.00258702, -0.449864, 0.00667712, 0.893072, 0, 0, 0)
script = ExtResource("1_2qm00")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qeldc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0.0806873, 0.262514, 0.078186)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(1, 0, 0, -3.72529e-09, 1, 1.86265e-09, -2.98023e-08, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_eyq75")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ddw37")

[node name="ActionZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)
collision_layer = 2
script = ExtResource("2_kkrn7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ActionZone"]
mesh = SubResource("SphereMesh_mfgol")
surface_material_override/0 = SubResource("StandardMaterial3D_5gpa2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ActionZone"]
shape = SubResource("SphereShape3D_8jf45")

[node name="RedirectionManager" type="Node3D" parent="."]
script = ExtResource("3_fwjqc")

[node name="CurvatureController" type="Node3D" parent="."]
script = ExtResource("4_tcsu2")

[node name="ResetController" type="Node3D" parent="."]
script = ExtResource("5_2vclo")

[node name="MetaStrategyManager" type="Node3D" parent="."]
script = ExtResource("6_hqu0u")

[node name="BoundaryRing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.22308, 0)
material_override = SubResource("StandardMaterial3D_2rgup")
mesh = SubResource("TorusMesh_1t4ky")

[node name="Balloons" type="Node3D" parent="."]
script = ExtResource("10_q8y60")

[node name="Ballon1" type="Node3D" parent="Balloons"]
transform = Transform3D(1, 4.65661e-10, 0, 6.98492e-10, 1, 4.65661e-10, 0, 1.39698e-09, 1, -2.66416, 0.68357, -1.04231)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Balloons/Ballon1"]
mesh = SubResource("SphereMesh_2nlxt")
surface_material_override/0 = SubResource("StandardMaterial3D_irg6d")

[node name="Ballon4" type="Node3D" parent="Balloons"]
transform = Transform3D(1, 6.98492e-10, -2.98023e-08, 6.98492e-10, 1, -4.65661e-10, 0, 2.32831e-09, 1, 3.13054, 0.5909, -0.00307798)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Balloons/Ballon4"]
mesh = SubResource("SphereMesh_2nlxt")
surface_material_override/0 = SubResource("StandardMaterial3D_irg6d")

[node name="Ballon3" type="Node3D" parent="Balloons"]
transform = Transform3D(1, 4.65661e-10, 0, 6.98492e-10, 1, 4.65661e-10, 0, 1.39698e-09, 1, 1.82831, 0.66868, 3.0228)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Balloons/Ballon3"]
mesh = SubResource("SphereMesh_2nlxt")
surface_material_override/0 = SubResource("StandardMaterial3D_irg6d")

[node name="Ballon2" type="Node3D" parent="Balloons"]
transform = Transform3D(1, 9.31323e-10, 0, 6.98492e-10, 1, 0, 0, 4.65661e-10, 1, -2.04259, 0.662291, 2.67315)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Balloons/Ballon2"]
mesh = SubResource("SphereMesh_2nlxt")
surface_material_override/0 = SubResource("StandardMaterial3D_irg6d")

[node name="CalibrationUI" type="CanvasLayer" parent="."]

[node name="CalibarationPanel" parent="CalibrationUI" instance=ExtResource("6_oo0k3")]

[node name="XRBody" type="CharacterBody3D" parent="."]
script = ExtResource("9_r4u24")

[node name="XROrigin3D" type="XROrigin3D" parent="XRBody"]
transform = Transform3D(1, 2.79397e-09, 0, 0, 1, 5.58794e-09, 0, 0, 1, 0.004, 0.4, 0.245)

[node name="Camera" type="XRCamera3D" parent="XRBody/XROrigin3D"]

[node name="LeftController" type="XRController3D" parent="XRBody/XROrigin3D"]
tracker = &"left_hand"
pose = &"aim"

[node name="RayCast3D" type="RayCast3D" parent="XRBody/XROrigin3D/LeftController"]
transform = Transform3D(1, 7.45058e-09, -5.96046e-08, 3.72529e-09, 1, 7.45058e-09, 5.96046e-08, -1.11759e-08, 1, 0, 0, 0)
target_position = Vector3(0, 0, -10)
debug_shape_custom_color = Color(0.784314, 0.427451, 0.815686, 1)
debug_shape_thickness = 4

[node name="RightController" type="XRController3D" parent="XRBody/XROrigin3D"]
tracker = &"right_hand"
pose = &"aim"

[node name="RayCast3D" type="RayCast3D" parent="XRBody/XROrigin3D/RightController"]
transform = Transform3D(1, 3.72529e-09, -2.98023e-08, 1.86265e-09, 1, 3.72529e-09, 2.98023e-08, -7.45058e-09, 1, 0, 0, 0)
target_position = Vector3(0, 0, -10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_aqk6w")

[connection signal="input_vector2_changed" from="XRBody/XROrigin3D/LeftController" to="XRBody" method="_on_left_controller_input_vector_2_changed"]
[connection signal="input_vector2_changed" from="XRBody/XROrigin3D/RightController" to="." method="_on_right_controller_input_vector_2_changed"]
